frame/support/test/tests/construct_runtime_ui/unsupported_pallet_attr.stderr
error: Unsupported attribute, only #[cfg] is supported on pallet declarations in `construct_runtime`
 --> tests/construct_runtime_ui/unsupported_pallet_attr.rs:7:3
  |
7 |         #[attr]
  |         ^
